added correct condition, works now, added h1 title and gap css between divs

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="index.css"/>
 </head>
 <body>
+    <main>
+        <h1>Palindrome Checker</h1>
+    </main>
     <script src="index.js"></script>
 </body>
 </html>
